adding to 2nd branch

--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
                 <!--Comment 1-->
                 <!--Comment 2-->
                 <!--Comment 3-->
+                <!--more comments-->
+                <!--Comment 3-->
+                <!--Comment 3-->
                 </div>  
             </div>
             <div class="container">
